# bevy-artificial-life

./: Cargo.toml  LICENSE  README.md
src/: main.rs
